Re phrased the question and the outcomes

--- a/group_7_proposal.ipynb
+++ b/group_7_proposal.ipynb
@@ -40,7 +40,7 @@
    "id": "9b7e4f09-5e08-4736-abf5-ff6467920137",
    "metadata": {},
    "source": [
-    "The question we are trying to answer is: **How will other health factors influence glucose, and diabetes diagnosis?**"
+    "The question we are trying to answer is: **How will other health factors influence glucose concentration, and a patients diabetes diagnosis?**"
    ]
   },
   {
@@ -2713,8 +2713,8 @@
    "source": [
     "What we would like to find:\n",
     "- How does blood pressure impact the likelihood of diabetes?\n",
-    "- What is the relationship of BMI and diabetic standing?\n",
-    "- What is the relationship between Glucose and Age with an emphasis on their Diabetic Standing?\n",
+    "- What is the relationship of BMI and diabetic diagnosis? \n",
+    "- What is the relationship between glucose concentration and age with an emphasis on their diabetic diagnosis?\n",
     "  "
    ]
   },
