Added a new expected outcome

--- a/group_7_proposal.ipynb
+++ b/group_7_proposal.ipynb
@@ -32,7 +32,7 @@
    "source": [
     "Diabetes is a common and chronic condition characterized by high blood sugar levels. It occurs when the body can't produce enough insulin or can't use it effectively. There are different types of diabetes, including Type 1, where the immune system attacks insulin-producing cells, and Type 2, usually linked to insulin resistance. Diabetes is a major global health concern, leading to complications like heart diseases, kidney issues, vision problems, and nerve damage. Lifestyle factors and genetics contribute to its development. Management involves medication, lifestyle changes, and regular monitoring. Due to its widespread impact, diabetes is a focus of ongoing research and public health efforts. In recent years in Canada, almost 1 in 10 adults from age 20 - 79 are diabetic, and of those adults aged 60 - 79 diabetes occurs in 1 in 5 (Statcan). \n",
     "\n",
-    "This dataset provides insight into diabetic diagnosis based on certain health factors for women over the age of 21 of Pima Indian heritage. The Pima is a Native American group situated in southern Arizona, USA. The health factors include the amount of pregnancies, glucose concentration (orally tested), blood pressure, skin thickness, BMI, diabetes pedigrees function, insulin level, and age. Understanding the health factors that are prevalent in diabetic patients is essential for developing treatment methods. Using these factors we will be able to notice trends, patterns, and relationships and use these to predict the diabetic outcome of an undiagnosed patient. This dataset will inform people of what health factors could possibly lead to diabetes at a later age. "
+    "This dataset provides insight into diabetic diagnosis based on certain health factors for women over the age of 21 of Pima Indian heritage. The Pima is a Native American group situated in southern Arizona, USA. The health factors include the amount of pregnancies, glucose concentration (orally tested), blood pressure, skin thickness, BMI, diabetes pedigrees function, insulin level, and age. Understanding the health factors that are prevalent in diabetic patients is essential for developing treatment methods. Using these factors we will be able to notice trends, patterns, and relationships and use these to predict the diabetic outcome of an undiagnosed patient. This dataset will inform people of what health factors could possibly lead to diabetes at a later age, and what preventative measures could be taken. "
    ]
   },
   {
@@ -3892,6 +3892,7 @@
     "- How does blood pressure impact the likelihood of diabetes?\n",
     "- Does the number of pregnancies have an impact on blood pressure and diabetic diagnosis?\n",
     "- What is the relationship between glucose concentration and age with an emphasis on their diabetic diagnosis?\n",
+    "- Do physical attributes relate to diabetic diagnosis?\n",
     "\n",
     "We are expecting that a patient with a high number of pregnancies, blood pressure, and glucose concentration will test positive for diabetes. What else do we expect to find?"
    ]
