Added figure and table titles under each table and figure. Gives room for explanation

--- a/group_7_proposal.ipynb
+++ b/group_7_proposal.ipynb
@@ -228,6 +228,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5e9a9675-56cd-4867-ae5b-ab7b6c60d614",
+   "metadata": {},
+   "source": [
+    "TABLE 1: "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "dd54fb48-490b-4b6e-b903-137d2bc1ab0a",
    "metadata": {},
    "source": [
@@ -324,6 +332,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a32629b7-450b-4c23-a1c9-a11475d9d0f4",
+   "metadata": {},
+   "source": [
+    "TABLE 2: "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "917918b5-7045-4c27-a90b-272d09215279",
    "metadata": {},
    "source": [
@@ -412,6 +428,14 @@
     "\n",
     "# displaying the data\n",
     "head(diabetes_summary)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e06b56e-d2ea-4685-8129-5517c8b9db70",
+   "metadata": {},
+   "source": [
+    "TABLE 3:"
    ]
   },
   {
@@ -532,6 +556,14 @@
     "                                average_blood_pressure = mean(blood_pressure))\n",
     "\n",
     "diabetes_training_pregnant_stage"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d64b49b4-9998-4522-8f05-9f89a873008e",
+   "metadata": {},
+   "source": [
+    "TABLE 4:"
    ]
   },
   {
@@ -1686,6 +1718,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fb267f29-d67b-44ac-8771-50b72ff630bc",
+   "metadata": {},
+   "source": [
+    "FIGURE 1: "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "c4369aa3-4de5-4e61-8900-f115c1ea1e19",
@@ -2819,6 +2859,14 @@
     "                          axis.title.x = element_text(size = 16),\n",
     "                          axis.title.y = element_text(size = 16))\n",
     "diabetes_pressure_plot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a87dc0ed-39e7-4113-a285-16767ba85fd0",
+   "metadata": {},
+   "source": [
+    "FIGURE 2:"
    ]
   },
   {
@@ -4095,6 +4143,7 @@
    "id": "d36438e3-f2f9-48a3-9745-caa479b6182d",
    "metadata": {},
    "source": [
+    "**FIGURE 3:**\n",
     "Analzying this plot we can determine that the amount of pregnancies as the patients age increases, which is as expected. As the patients reach the age range of 40 - 50 years old the women that do have diabetes generally have more children, as most of the histogram bars are lighter in colour. We can also determine that the women who have diabetes in this range tend to have a higher blood pressure, high blood pressure and pregnancies have a positive relationship, and is more common in patients with a positive diabetic diagnosis. "
    ]
   },
