Resolved merge conflicts

--- a/group_7_proposal.ipynb
+++ b/group_7_proposal.ipynb
@@ -40,7 +40,8 @@
    "id": "9b7e4f09-5e08-4736-abf5-ff6467920137",
    "metadata": {},
    "source": [
-    "The question we are trying to answer is: **How will other health factors influence glucose concentration, and a patients diabetes diagnosis?**"
+    "The question we are trying to answer is: \n",
+    "**How will other health factors influence glucose concentration, and a patients diabetes diagnosis?**"
    ]
   },
   {
