Semi-final copy

--- a/group_7_proposal.ipynb
+++ b/group_7_proposal.ipynb
@@ -30,9 +30,9 @@
    "id": "2d4246b2-bdfc-4b5d-8b60-ab8af874b359",
    "metadata": {},
    "source": [
-    "Diabetes is a common and chronic condition characterized by high blood sugar levels. It occurs when the body can't produce enough insulin or can't use it effectively. There are different types of diabetes, including Type 1, where the immune system attacks insulin-producing cells, and Type 2, usually linked to insulin resistance. Diabetes is a major global health concern, leading to complications like heart diseases, kidney issues, vision problems, and nerve damage. Lifestyle factors and genetics contribute to its development. Management involves medication, lifestyle changes, and regular monitoring. Due to its widespread impact, diabetes is a focus of ongoing research and public health efforts. In recent years in Canada, almost 1 in 10 adults from age 20 - 79 are diabetic, and of those adults aged 60 - 79 diabetes occurs in 1 in 5 (Statcan, 2023). \n",
+    "Diabetes is a common and chronic condition characterized by high blood sugar levels. It occurs when the body can't produce enough insulin or can't use it effectively. Diabetes is a major global health concern, leading to complications like heart diseases, kidney issues, vision problems, and nerve damage. Lifestyle factors and genetics contribute to its development. Management involves medication, lifestyle changes, and regular monitoring. Due to its widespread impact, diabetes is a focus of ongoing research and public health efforts. \n",
     "\n",
-    "This dataset provides insight into diabetic diagnosis based on certain health factors for women over the age of 21 of Pima Indian heritage. The Pima is a Native American group situated in southern Arizona, USA. The health factors include the amount of pregnancies, glucose concentration (orally tested), blood pressure, skin thickness, BMI, diabetes pedigrees function, insulin level, and age. Understanding the health factors that are prevalent in diabetic patients is essential for developing treatment methods. Using these factors we will be able to notice trends, patterns, and relationships and use these to predict the diabetic outcome of an undiagnosed patient. This dataset will inform people of what health factors could possibly lead to diabetes at a later age, and what preventative measures could be taken. "
+    "This dataset provides insight into diabetic diagnosis based on certain health factors for women over the age of 21 of Pima Indian heritage. The Pima is a Native American group situated in southern Arizona, USA. The health factors include the number of pregnancies, glucose concentration (orally tested), blood pressure, skin thickness, BMI, diabetes pedigrees function, insulin level, and age. Understanding the health factors that are prevalent in diabetic patients is essential for developing treatment methods. Using these factors, we will be able to notice trends, patterns, and relationships and use these to predict the diabetic outcome of an undiagnosed patient and what preventative measures can be taken. "
    ]
   },
   {
@@ -40,8 +40,8 @@
    "id": "9b7e4f09-5e08-4736-abf5-ff6467920137",
    "metadata": {},
    "source": [
-    "The question we are trying to answer is: \n",
-    "**Can we predict a patient's diagnosis of diabetes based on health factors such as blood pressure, BMI, pregnancies etc?**"
+    "Our Question: \n",
+    "**Can we predict a patient's diagnosis of diabetes based on health factors such as blood pressure, BMI, pregnancies etc.?**"
    ]
   },
   {
@@ -3037,6 +3037,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c6a46299-6856-4ec9-a470-60e7b5a638a0",
    "metadata": {},
@@ -3053,7 +3054,7 @@
     "8. **age** - Age (years)\n",
     "9. **diabetes** - Class variable (0 or 1) 268 of 768 are 1, the others are 0\n",
     "\n",
-    "We will conduct this data analysis by examining the relationships of glucose concetration, blood pressure, age and amount of pregnancies to the diagnosis of diabets for a given pateint. Using the factors we can determine the relationships and compare the strength to determine what health factors contributes and is prevelant in a positive diabetes diagnosis. These variables are useful for our predictions based on some preliminary analysis and trends developed in the plots above, we have noticed that high glucose concentration and amount of pregnancies are common with patients with diabetes. \n",
+    "We will conduct this data analysis by examining the relationships of glucose concentration, blood pressure, age and number of pregnancies to the diagnosis of diabetes. We can determine the relationships and compare the strength to determine what health factors contributes and is prevalent in a positive diabetes diagnosis. These variables are useful for our predictions based on some preliminary analysis and trends developed in the plots above. \n",
     "\n",
     "To visualize the results, we would initially create a scatter plot to discover the relationship (linear, strong, etc) between the predictors. After predicting on the testing set, we would be able to see the prediction results in a table. Furthermore, we could use a bar plot to visualize and compare the different precision, accuracy, and recall for various K values."
    ]
@@ -3071,11 +3072,10 @@
    "id": "96445413-1579-4831-b7ee-442657769cab",
    "metadata": {},
    "source": [
-    "What we would like to find:\n",
-    "- How does blood pressure impact the likelihood of diabetes?\n",
-    "- Does the number of pregnancies have an impact on blood pressure and diabetic diagnosis?\n",
-    "- What is the relationship between glucose concentration and age with an emphasis on their diabetic diagnosis?\n",
-    "- Do physical attributes relate to diabetic diagnosis?"
+    "Expectations\n",
+    "1. Blood pressure and number of pregnancies impact the likelihood of diabetes.\n",
+    "2. There is positive relationship between diabetes and BMI.\n",
+    "3. High age and glucose concentration increase the likelihood of diabetes. "
    ]
   },
   {
@@ -3083,11 +3083,11 @@
    "id": "8db19d33-0e87-4104-8243-feb8892e0152",
    "metadata": {},
    "source": [
-    "Such findings will be able to create a much bigger impact in the future, such as …\n",
+    "Impact\n",
     "\n",
-    "1. Visualize if BMI level and blood pressure influences the likelihood of diabetes\n",
-    "2. Determine what aspects/variables related to diabetes medical workers need to focus on to prevent/decrease the risk of future patients being diagnosed with diabetes\n",
-    "3. Determining the critical age range where individuals are more susceptible to developing diabetes based on glucose levels"
+    "1. Visualize if BMI level and blood pressure influences the likelihood of diabetes. \n",
+    "2. Determine what variables related to diabetes medical workers must focus on to decrease the risk of diabetes diagnosis. \n",
+    "3. Determining the critical age range where individuals are more susceptible to developing diabetes based on glucose levels. "
    ]
   },
   {
@@ -3095,7 +3095,7 @@
    "id": "888bfbef-5a37-4fb7-9e22-4cd3bacc2a20",
    "metadata": {},
    "source": [
-    "Some future questions that this could lead to include:\n",
+    "Future Questions\n",
     "1. What trait should doctors monitor for highly diabetic patients?\n",
     "2. At what age should individuals closely monitor their glucose level?\n",
     "3. Should pregnant women be more cautious towards diabetes?"
@@ -3115,14 +3115,6 @@
    "metadata": {},
    "source": [
     "Smith, J.W., Everhart, J.E., Dickson, W.C., Knowler, W.C., & Johannes, R.S. (1988). Using the ADAP learning algorithm to forecast the onset of diabetes mellitus. In Proceedings of the Symposium on Computer Applications and Medical Care (pp. 261--265). IEEE Computer Society Press."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "542acd85-f8d6-413f-98bd-9a2e0db5931e",
-   "metadata": {},
-   "source": [
-    "Government of Canada, S. C. (2023, November 28). Diabetes among Canadian adults. Www.statcan.gc.ca. https://www.statcan.gc.ca/o1/en/plus/5103-diabetes-among-canadian-adults"
    ]
   }
  ],
