Major formatting change

--- a/group_7_report.ipynb
+++ b/group_7_report.ipynb
@@ -5,7 +5,7 @@
    "id": "80978772-29b4-4edd-a1ad-a3d2aa2879f8",
    "metadata": {},
    "source": [
-    "# Diabetes or not: A Comprehensive Report of Diabetical Symptoms in Pima Indians Diabetes Database #"
+    "# **Diabetes or not: A Comprehensive Report of Diabetical Symptoms in Pima Indians Diabetes Database** #"
    ]
   },
   {
@@ -21,31 +21,97 @@
    "id": "ea263a11-27fd-46fb-8e9e-10034cedda14",
    "metadata": {},
    "source": [
-    "### Introduction"
+    "## Introduction"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5ee43dd8-6a6b-4619-84f2-c31cb59f161e",
+   "cell_type": "markdown",
+   "id": "44c02fcd-284c-49ee-9f16-fbbe2045eebf",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Diabetes is a **common** and **chronic** condition characterized by **high blood sugar levels**. It occurs when the body can't produce enough insulin or can't use it effectively. Diabetes is a major global health concern, leading to complications like heart diseases, kidney issues, vision problems, and nerve damage. Lifestyle factors and genetics contribute to its development. Management involves medication, lifestyle changes, and regular monitoring. Due to its widespread impact, diabetes is a focus of ongoing research and public health efforts. \n",
+    "\n",
+    "This dataset provides insight into diabetic diagnosis based on **certain health factors** for *women* over the *age of 21* of *Pima Indian heritage*. The Pima is a Native American group situated in southern Arizona, USA. The health factors include the number of pregnancies, glucose concentration (orally tested), blood pressure, skin thickness, BMI, diabetes pedigrees function, insulin level, and age. Understanding the health factors that are prevalent in diabetic patients is essential for developing treatment methods. Using these factors, we will be able to notice trends, patterns, and relationships and use these to **predict the diabetic outcome** of an **undiagnosed patient** and what preventative measures can be taken. "
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d088d9cd-6a82-4b9a-b344-983e038a9b17",
+   "cell_type": "markdown",
+   "id": "9bbb3402-3788-4cdf-b8f2-fc1b6b1d20d0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Hence, we formulate the following question: **Can we predict a patient's diagnosis of diabetes based on health factors such as blood pressure, BMI, pregnancies etc.?**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ddc9013a-d435-44a7-92b9-70c1f8fcce5e",
+   "metadata": {},
+   "source": [
+    "## A Quick Overview "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0bf785a2-1565-4be7-953d-f93cc6e5ae13",
+   "metadata": {},
+   "source": [
+    "### 1. Loading and cleaning the dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3c8aefa-04d1-4060-99c9-0f497b54fb35",
+   "metadata": {},
+   "source": [
+    "### 2. Finding best predictors"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "da808add-029a-47db-a89e-d8e684b46b5a",
+   "metadata": {},
+   "source": [
+    "### 3. Choosing the best $k$ value to use"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39a98b34-48f4-40ce-9a30-4827eb81b024",
+   "metadata": {},
+   "source": [
+    "### 4. Building the model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "99f01088-0562-4bb1-a3d3-b6c42d2b5058",
+   "metadata": {},
+   "source": [
+    "### 5. Testing the model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c835d55-6d7f-4bf2-a568-58b910491860",
+   "metadata": {},
+   "source": [
+    "### 6. Evaluating model performance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e718a968-be5c-40b4-afc9-c5b8d3cf463d",
+   "metadata": {},
+   "source": [
+    "### 7. Visualizing model performance"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "f07a4d5b-a3cb-4fdb-bc77-e65c6d3d24af",
    "metadata": {},
    "source": [
-    "### Loading libraries"
+    "## Loading libraries"
    ]
   },
   {
@@ -95,7 +161,7 @@
    "id": "08270290-883c-446c-9d58-2a6453b01caa",
    "metadata": {},
    "source": [
-    "### Methods & Results"
+    "## Methods & Results"
    ]
   },
   {
@@ -103,7 +169,7 @@
    "id": "0d3a8da0-365d-4924-a65e-aeaea0202be3",
    "metadata": {},
    "source": [
-    "**1. Preeliminary processing**"
+    "### **Preeliminary processing**"
    ]
   },
   {
@@ -111,7 +177,7 @@
    "id": "de3a850b-06cb-47f8-aca3-d3eb6eb636fd",
    "metadata": {},
    "source": [
-    "To process the data, we first applied `read_csv` to read from a particular format, then we used `clean_names` so the column names were properly formatted, and converted the target cell for classification into categorical values."
+    "To process the data, we first applied `read_csv` to read from a particular format, then we used `clean_names` so the column names were properly formatted, and converted our response variable to of **factor / categorical** type."
    ]
   },
   {
@@ -217,7 +283,7 @@
    "id": "394294c5-eaf6-44a1-8c1d-883652ba5552",
    "metadata": {},
    "source": [
-    "**2. Splitting data into training and testing**"
+    "### **Splitting data into training and testing**"
    ]
   },
   {
@@ -225,7 +291,7 @@
    "id": "00837cb2-4117-45f2-839f-068031524fb1",
    "metadata": {},
    "source": [
-    "To work with the dataset and build a model, we can first split our initial data to training and testing data. We stratify by the the `diabetes` column, as we want to get roughly equal number of those with and without diabetes in our testing set, to ensure the model can predict both ways. Furthermore, we also used `initial_split` to split the dataset into 75% training data, and 25% testing data."
+    "To work with the dataset and build a model, we can first split our initial data to training and testing data. We **stratify** by the the `diabetes` column, as we want to get roughly equal number of those with and without diabetes in our testing set, to ensure the model can predict both ways. Furthermore, we also used `initial_split` to split the dataset into 75% training data, and 25% testing data."
    ]
   },
   {
@@ -320,7 +386,7 @@
    "id": "8dfd3f97-e48a-476d-99c1-16948fff9165",
    "metadata": {},
    "source": [
-    "**3. Selecting what predictors to use**"
+    "### **Selecting what predictors to use**"
    ]
   },
   {
@@ -2422,7 +2488,7 @@
    "id": "9929a7b5-b6df-4752-8844-4d976bcb319b",
    "metadata": {},
    "source": [
-    "### Discussion"
+    "## Discussion"
    ]
   },
   {
@@ -2438,16 +2504,16 @@
    "id": "5fdad02c-d95f-4346-94d9-17bddd3c0381",
    "metadata": {},
    "source": [
-    "### References"
+    "## References"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "52557efc-137b-4e7a-8e3a-037f51179afe",
+   "cell_type": "markdown",
+   "id": "48e48796-4c62-4bea-9a8c-a97032ff0750",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Smith, J.W., Everhart, J.E., Dickson, W.C., Knowler, W.C., & Johannes, R.S. (1988). Using the ADAP learning algorithm to forecast the onset of diabetes mellitus. In Proceedings of the Symposium on Computer Applications and Medical Care (pp. 261--265). IEEE Computer Society Press."
+   ]
   }
  ],
  "metadata": {
