Created template for discussion

--- a/group_7_report.ipynb
+++ b/group_7_report.ipynb
@@ -7694,7 +7694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "a986ab12-03b0-4e23-a7e7-a3a372ba482b",
    "metadata": {},
    "outputs": [],
@@ -7721,11 +7721,7 @@
     "                      grid = tibble(neighbors = seq(from = 1, to = 200, by = 5)))  |>\n",
     "            collect_metrics() |>\n",
     "            filter(.metric == \"accuracy\") |>\n",
-    "            select(neighbors, mean)\n",
-    "\n",
-    "# Selecting Best K\n",
-    "lowest_rmspe <- diabetes_metrics |> slice_max(mean)\n",
-    "lowest_rmspe"
+    "            select(neighbors, mean)\n"
    ]
   },
   {
@@ -7762,10 +7758,42 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9929a7b5-b6df-4752-8844-4d976bcb319b",
+   "id": "c7ddaef1-daa0-4f50-ae59-8d4b576521cf",
    "metadata": {},
    "source": [
-    "## Discussion"
+    "### **Using the model to predict on testing data**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bdfbbf1b-a986-404e-8eae-927687a58591",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ed1209d4-88fd-47ea-b5ad-7d3d67470f61",
+   "metadata": {},
+   "source": [
+    "### **Evaluating the performance**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "775273a2-5049-447e-8b68-01690307f65e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e929d24-5ce3-41bd-bf9f-faedc4c96405",
+   "metadata": {},
+   "source": [
+    "### **Visualizing the performance**"
    ]
   },
   {
@@ -7775,6 +7803,58 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ae90505-c643-4f63-8f8b-616a56e516cf",
+   "metadata": {},
+   "source": [
+    "## Discussion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "179e3484-686c-4000-b603-368306533863",
+   "metadata": {},
+   "source": [
+    "#### **Summary of findings**\n",
+    "-\n",
+    "-\n",
+    "-"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "21a1d620-e2d9-44ed-a99e-c139eb29ca52",
+   "metadata": {},
+   "source": [
+    "#### **Alignment with expectations**\n",
+    "-\n",
+    "-\n",
+    "-"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "053b7980-6608-4e63-acef-838b179bf994",
+   "metadata": {},
+   "source": [
+    "#### **Impact of findings**\n",
+    "-\n",
+    "-\n",
+    "-"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cbc70394-92c2-4523-87ca-c7ebc623fc41",
+   "metadata": {},
+   "source": [
+    "#### **Future questions**\n",
+    "-\n",
+    "-\n",
+    "-"
+   ]
   },
   {
    "cell_type": "markdown",
