--- a/group_7_report.ipynb
+++ b/group_7_report.ipynb
@@ -8232,7 +8232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "775273a2-5049-447e-8b68-01690307f65e",
    "metadata": {},
    "outputs": [
@@ -8384,6 +8384,18 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "          Truth\n",
+       "Prediction  No Yes\n",
+       "       No  116  37\n",
+       "       Yes   9  30"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -8402,7 +8414,13 @@
     "\n",
     "#Calculating recall value \n",
     "diabetes_test_predictions |>\n",
-    "recall(truth = diabetes, estimate = .pred_class, event_level = \"second\")\n"
+    "recall(truth = diabetes, estimate = .pred_class, event_level = \"second\")\n",
+    "\n",
+    "#Confusion Matrix\n",
+    "\n",
+    "confusion <- diabetes_test_predictions |>\n",
+    "             conf_mat(truth = diabetes, estimate = .pred_class)\n",
+    "confusion"
    ]
   },
   {
