Finished documentation for evaluation

--- a/group_7_report.ipynb
+++ b/group_7_report.ipynb
@@ -8720,6 +8720,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d33265fe-7e42-4483-af12-147e9297fd8e",
+   "metadata": {},
+   "source": [
+    "Now, we evaluate the performance by three very important metrics, which are **accuracy**, **precision**, and **recall**. Note that each of these have different use cases. We have these three different formulas for each. We will begin by the first one, accuracy.\n",
+    "\n",
+    "$$accuracy = \\frac{\\text{number of correct predictions}}{\\text{number of total predictions}}$$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 38,
    "id": "775273a2-5049-447e-8b68-01690307f65e",
@@ -8774,6 +8784,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0e4af3c1-1265-4c39-b950-5237f6e0436c",
+   "metadata": {},
+   "source": [
+    "We have an accuracy of about **76%** which is an acceptable amount. However, only evaluating on accuracy doesn't give us that much information, as it doesn't tell us what type of **mistake** we may be making, and that there might be an **imbalance** between positive / negative predictions."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 40,
    "id": "83db3039-3fc7-4522-bdd6-34b979c86b07",
@@ -8812,6 +8830,24 @@
    "source": [
     "# checking the order of labels in the diabetes variable\n",
     "diabetes_test_predictions |> pull(.pred_actual) |> levels()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a7d5a16d-418f-4639-ad41-aae8a49615f3",
+   "metadata": {},
+   "source": [
+    "It is a good option for us to evaluate as well using **precision** and **recall**. When using precision/recall, we need to designate one of the class labels as being more **interesting**, and hence **positive**. In this case, this is when someone is diagnosed to have diabetes. We perform `pull` and `levels` as above, and we obtain that the `event_level` we must specify is **second**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "74fb1739-ada2-42e2-81c9-b55bd2570a32",
+   "metadata": {},
+   "source": [
+    "We begin doing our analysis on **prediction**, which tells us how **confident** when can be, when our model tells us that it's positive.\n",
+    "\n",
+    "$$precision = \\frac{\\text{correct positive predictions}}{\\text{total positive predictions}}$$"
    ]
   },
   {
@@ -8868,6 +8904,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a253a256-9a17-4655-8366-86959a3589f2",
+   "metadata": {},
+   "source": [
+    "We obtain a precision of about **77%**, which is similar to our accuracy. From this, we can say that we can be somewhat sure that our model is correct when it diagnoses someone with diabetes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "30d71ce6-3d59-4a68-98c6-41dbf7dbaaf9",
+   "metadata": {},
+   "source": [
+    "Lastly, we can do our analysis on **recall**, which actually tells us how much of the truly positive predictions it's predicting.\n",
+    "\n",
+    "$$recall = \\frac{\\text{correct positive predictions}}{\\text{total truly positive predictions}}$$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 43,
    "id": "27bd9555-3fc7-4d17-8e02-7b3fed8a0374",
@@ -8921,6 +8975,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "115041e5-a3dc-48fb-8ac9-be62244a3d42",
+   "metadata": {},
+   "source": [
+    "This is where the problem comes in. Our model has a recall of **45%**, so it does not do very well to identify more of the **actual** diabetic patients. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 44,
    "id": "46398e37-9ae1-41e8-a1c8-ddebeeb839b3",
@@ -8944,6 +9006,14 @@
     "confusion <- diabetes_test_predictions |>\n",
     "             conf_mat(truth = .pred_actual, estimate = .pred_class)\n",
     "confusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb7fac79-fbdc-458a-a743-6efa99aa129c",
+   "metadata": {},
+   "source": [
+    "We can conclude that our model has high **precision** but low **recall**. This means that with any positive result, when our model says that one is diabetic, we can trust that it's really true. However, the model still has to do better when trying to identify **all** of the positive results."
    ]
   },
   {
