--- a/group_7_report.ipynb
+++ b/group_7_report.ipynb
@@ -61,8 +61,7 @@
     "3. Choosing best **$k$ value** to use\n",
     "4. **Building**the model\n",
     "5. **Testing** the model\n",
-    "6. **Evaluating** model performance\n",
-    "7. **Visualizing** model performance"
+    "6. **Evaluating** model performance"
    ]
   },
   {
@@ -206,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 106,
    "id": "5fc59206-0ce6-4c80-af68-5e9004dc9e2b",
    "metadata": {},
    "outputs": [
@@ -289,6 +288,24 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "768"
+      ],
+      "text/latex": [
+       "768"
+      ],
+      "text/markdown": [
+       "768"
+      ],
+      "text/plain": [
+       "[1] 768"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -299,7 +316,8 @@
     "            mutate(diabetes = fct_recode(outcome, \"Yes\" = \"1\", \"No\" = \"0\")) |>\n",
     "            select(-outcome)\n",
     "\n",
-    "head(diabetes)"
+    "head(diabetes)\n",
+    "nrow(diabetes)"
    ]
   },
   {
@@ -8731,7 +8749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 76,
    "id": "775273a2-5049-447e-8b68-01690307f65e",
    "metadata": {},
    "outputs": [
@@ -8779,8 +8797,8 @@
    "source": [
     "# evaluating the accuracy  \n",
     "diabetes_test_predictions |>\n",
-    "metrics(truth = .pred_actual, estimate = .pred_class) |>\n",
-    "filter(.metric == \"accuracy\")"
+    "    metrics(truth = .pred_actual, estimate = .pred_class) |>\n",
+    "    filter(.metric == \"accuracy\")"
    ]
   },
   {
@@ -8793,7 +8811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 77,
    "id": "83db3039-3fc7-4522-bdd6-34b979c86b07",
    "metadata": {},
    "outputs": [
@@ -9015,22 +9033,6 @@
    "source": [
     "We can conclude that our model has high **precision** but low **recall**. This means that with any positive result, when our model says that one is diabetic, we can trust that it's really true. However, the model still has to do better when trying to identify **all** of the positive results."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6e929d24-5ce3-41bd-bf9f-faedc4c96405",
-   "metadata": {},
-   "source": [
-    "### **Visualizing the performance**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ec1dfc75-3b03-4bfd-9dbe-983b1a63c153",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
